2002-03-04  Alasdair Allan <aa@astro.ex.ac.uk>

        * Inital framework.