@@ -1,0 +1,1 @@
+globus_io_handle_t *    T_PTROBJ
